<resources>
    <string name="app_name">VisitorsApp</string>

    <string name="splash_intro">Hello, give us a moment to detect your location</string>
    <string name="location_turn_on">Please turn on your location...</string>
    <string name="location_permission">Please allow us to access your location...</string>
    <string name="location_error">Couldn\'t get your location, please try again</string>

    <string name="welcome">Welcome to our office at </string>
    <string name="book">Book a Visit</string>
    <string name="restart">Please restart the app</string>

    <string name="name">Your Name</string>
    <string name="email">Your Email</string>
    <string name="mobile">Your Mobile Number</string>
    <string name="address">Your Address</string>
    <string name="purpose">Purpose of Visit :</string>
    <string name="host_emp">Host Employee :</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="next">Next</string>

    <string name="open_cam">Open Camera</string>
    <string name="take_pic">Please take a picture first</string>
    <string name="submit">Submit</string>

    <string name="all_req">Sorry all fields are required</string>

    <array name="purposes_array">

        <item>Meeting</item>
        <item>Interview</item>
        <item>Vendor</item>
        <item>Audit</item>

    </array>

</resources>